# teleop-gp-gbr

./: .gitignore  .gitmodules  README.md
bimanual_architecture/: Dockerfile  README.md
bimanual_architecture/docs/chapters/: franka_bringup.md
bimanual_architecture/franka_bringup/config/real/: single_controllers.yaml
bimanual_architecture/franka_bringup/config/sim/: single_sim_controllers.yaml
bimanual_architecture/franka_bringup/launch/real/: franka.launch.py
bimanual_architecture/franka_bringup/launch/sim/: franka_sim.launch.py
bimanual_architecture/franka_example_controllers/: CMakeLists.txt  franka_example_controllers.xml
bimanual_architecture/franka_example_controllers/include/franka_example_controllers/subscriber/: haptic_gravity_compensation_controller.hpp
bimanual_architecture/franka_example_controllers/src/subscriber/: cartesian_impedance_controller.cpp  haptic_gravity_compensation_controller.cpp
bimanual_architecture/garmi_packages/garmi_bringup/: CMakeLists.txt
bimanual_architecture/garmi_packages/garmi_bringup/config/sim/: sim_garmi.yaml
bimanual_architecture/garmi_packages/garmi_bringup/launch/sim/: launch_mujoco_ros_server.launch  sim_garmi.launch.py
bimanual_architecture/garmi_packages/garmi_controllers/: CMakeLists.txt  garmi_controllers.xml  package.xml
bimanual_architecture/garmi_packages/garmi_controllers/include/garmi_controllers/: dual_cartesian_impedance_controller.hpp  dual_joint_impedance_controller.hpp
bimanual_architecture/garmi_packages/garmi_controllers/src/: dual_cartesian_impedance_controller.cpp  dual_joint_impedance_controller.cpp
bimanual_architecture/garmi_packages/teleop_bringup/: CMakeLists.txt  README.md  package.xml
bimanual_architecture/garmi_packages/teleop_bringup/config/real/: base_head_only.yaml  garmi.yaml  garmi_ns.yaml  garmi_teleop.yaml
bimanual_architecture/garmi_packages/teleop_bringup/config/sim/: sim_garmi_ns.yaml  sim_garmi_teleop.yaml
bimanual_architecture/garmi_packages/teleop_bringup/config/single/: single_controllers.yaml
bimanual_architecture/garmi_packages/teleop_bringup/launch/real/: base_head_only.launch.py  garmi.launch.py  real_garmi_full.launch.py  real_garmi_moveit.launch.py  real_garmi_teleop.launch.py
bimanual_architecture/garmi_packages/teleop_controllers/: CMakeLists.txt  package.xml  teleop_controllers.xml
bimanual_architecture/geo_gp/geo_gp_bringup/: CMakeLists.txt  package.xml
bimanual_architecture/geo_gp/geo_gp_bringup/config/: single_controllers.yaml
bimanual_architecture/geo_gp/geo_gp_bringup/launch/: geo_gp.launch.py  single_arm.launch.py
bimanual_architecture/geo_gp/geo_gp_controllers/: CMakeLists.txt  geo_gp_controllers.xml  package.xml
bimanual_architecture/geo_gp/geo_gp_controllers/include/geo_gp_controllers/state_broadcaster/: franka_torque_broadcaster.hpp
bimanual_architecture/geo_gp/geo_gp_controllers/include/geo_gp_controllers/subscriber/: cartesian_impedance_controller.hpp  gravity_compensation_with_joint_torque_feedback_controller.hpp  joint_impedance_controller.hpp
bimanual_architecture/geo_gp/geo_gp_controllers/src/comless/: motion_generator.cpp
bimanual_architecture/geo_gp/geo_gp_controllers/src/state_broadcaster/: franka_torque_broadcaster.cpp
bimanual_architecture/geo_gp/geo_gp_controllers/src/subscriber/: cartesian_impedance_controller.cpp  gravity_compensation_with_joint_torque_feedback_controller.cpp  joint_impedance_controller.cpp
bimanual_architecture/geo_gp/geo_gp_execution/: CMakeLists.txt  package.xml
bimanual_architecture/geo_gp/geo_gp_execution/include/geo_gp_execution/: trajectory_executor.hpp
bimanual_architecture/geo_gp/geo_gp_execution/src/: trajectory_executor.cpp
bimanual_architecture/geo_gp/geo_gp_interfaces/: CMakeLists.txt  package.xml
bimanual_architecture/geo_gp/geo_gp_interfaces/action/: ExecuteTrajectory.action
bimanual_architecture/geo_gp/geo_gp_interfaces/msg/: PredictedTrajectory.msg  SkillMatchResult.msg
bimanual_architecture/geo_gp/geo_gp_prediction/: package.xml  setup.cfg  setup.py
bimanual_architecture/geo_gp/geo_gp_prediction/geo_gp_prediction/: prediction_node.py  predictor.py
bimanual_architecture/geo_gp/geo_gp_prompt/: CMakeLists.txt  package.xml
bimanual_architecture/geo_gp/geo_gp_prompt/src/: prompt_recorder.cpp
bimanual_architecture/geo_gp/msg/: PromptTrajectory.msg
bimanual_architecture/teleop_csv_player/: CMakeLists.txt  package.xml
bimanual_architecture/teleop_csv_player/launch/: csv_player.launch.py  move_to_pose.launch.py
bimanual_architecture/teleop_csv_player/src/: csv_pose_player.cpp  move_to_pose.cpp
bimanual_architecture/trajectory_recorder/: package.xml
bimanual_architecture/trajectory_recorder/src/: record_ee_trajectory.cpp
trajectory_recorder/: CMakeLists.txt  package.xml
trajectory_recorder/src/: record_ee_trajectory.cpp
(+43 files in other folders)
